--- a/app/src/main/resources/static/html/index.html
+++ b/app/src/main/resources/static/html/index.html
@@ -117,14 +117,16 @@
                 table.row(this).nodes().to$().addClass( 'dataTable-tr-color' );
             }
         });
-        $.each($("#dataTable tbody tr"),function(i,d){
+        /*$.each($("#dataTable tbody tr"),function(i,d){
             console.log($(d).children("td:last").children("button:eq(0)"));
             $(d).children("td:last").children("button[name=examine]").click(function(){
                 alert("查看");
             })
-        });
+        });*/
 
-
+        $("#dataTable tbody").on('click','button[name=examine]',function(event){
+            alert("查看");
+        })
 
 
     });
